--- a/p2/shared/app1.yaml
+++ b/p2/shared/app1.yaml
@@ -15,23 +15,26 @@ spec:
         - name: app1
           image: paulbouwer/hello-kubernetes:1
           ports:
-            - containerPort: 8080
+            - containerPort: 80
               protocol: TCP
           env:
           - name: MESSAGE
             value: "Hello from app1"
+          - name: PORT
+            value: "80"
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1
+  name: app1-svc
   labels:
     run: app1
 spec:
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
   selector:
     run: app1
+
