--- a/p2/shared/app3.yaml
+++ b/p2/shared/app3.yaml
@@ -20,13 +20,15 @@ spec:
           env:
           - name: MESSAGE
             value: "Hello from app3"
+          - name: PORT
+            value: "80"
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: app3
+  name: app-three
   labels:
     run: app3
 spec:
