--- a/p2/shared/ingress.yaml
+++ b/p2/shared/ingress.yaml
@@ -26,8 +26,7 @@ spec:
             name: app-two
             port:
               number: 80
-  - host: app3.com
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
