--- a/p2/confs/ingress.yaml
+++ b/p2/confs/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1-ingress
+  name: ft-ingress
   annotations:
     kubernetes.io/ingress.class: "traefik"
 spec:
